# boil

./: .gitignore  README.md  build
blob/MyPrelude/: MyPrelude.cabal  hie.yaml
blob/MyPrelude/base-noprelude-4.14.1.0/: base-noprelude.cabal
blob/MyPrelude/dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  solver-plan121094-1.tmp  solver-plan153177-1.tmp  source-hashes  up-to-date
blob/MyPrelude/dist-newstyle/packagedb/ghc-8.11.0.20191220/: MyPrelude-0.1.0.0-inplace.conf  package.cache
blob/MyPrelude/src/: BTree.hs  Base.hs  Coerce.hs  Defn.hs  Elem.hs  Iso.hs  Prelude.hs  Recursion.hs  Stack.hs  TypeUtils.hs  Unit.hs  Utils.hs  Wrapped.hs
blob/MyPrelude/src/Data/: Stream.hs
blob/MyPrelude/src/Data/Foldable/: Foldr.hs  Hyp.hs  Unfoldable.hs
blob/MyPrelude/src/Data/Stream/: Instances.hs  Internal.hs  Type.hs
blob/MyPrelude/src/Logic/: Neq.hs  Not.hs  Set.hs
mics/: dependencies.dhall  extensions.dhall  listmap.dhall  makepack.dhall  settings.dhall
