cabal-version:       2.4
name:                MyPrelude
version:             0.1.0.0

library
  exposed-modules:     Prelude
                     , BTree
                     , Coerce
                     , Defn
                     , Iso
                     , Recursion
                     , Stack
                     , TypeUtils
                     , Utils
                     , Wrapped
  other-modules:       Elem
                     , Base

  build-depends:       base-noprelude >=4.12
                     , semirings
                     , comonad
                     , pointed
                     , containers
                     , semialign
                     , these
                     , semigroupoids
                     , bifunctors
                     , recursion-schemes
                     , data-fix
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    NoImplicitPrelude
    NoMonomorphismRestriction

    BlockArguments
    ConstraintKinds
    DefaultSignatures
    DefaultSignatures
    DerivingStrategies
    FlexibleInstances
    FunctionalDependencies
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    PatternSynonyms
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

