cabal-version:       2.4
name:                MyPrelude
version:             0.1.0.0

library
  exposed-modules:     Prelude
                     , BTree
                     , Defn
                     , Iso
                     , Recursion
                     , TypeUtils
                     , Utils
                     , Wrapped
                     , Logic.Not
                     , Logic.Neq
                     , Logic.Set
                     , Unit
                     , Data.Foldable.Foldr
                     , Data.Foldable.Unfoldable
                     , Data.Stream
                     , Data.Stream.Type
                     , Data.Stream.Internal
                     , Data.Stream.Instances
  other-modules:       Base

  build-depends:       base-noprelude >=4.13
                     , semirings
                     , comonad
                     , pointed
                     , containers
                     , semialign
                     , these
                     , semigroupoids
                     , bifunctors
                     , profunctors
                     , recursion-schemes
                     , data-fix
                     , free
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:
    NoImplicitPrelude
    NoMonomorphismRestriction

    BlockArguments
    ConstraintKinds
    DefaultSignatures
    DefaultSignatures
    DerivingStrategies
    FlexibleInstances
    FunctionalDependencies
    FunctionalDependencies
    GeneralizedNewtypeDeriving
    InstanceSigs
    KindSignatures
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    PatternSynonyms
    QuantifiedConstraints
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TypeApplications
    TypeFamilies
    TypeOperators
    UnicodeSyntax
    ViewPatterns

